--- a/config.yml
+++ b/config.yml
@@ -3,8 +3,7 @@ router:
   user: 'root'
   password: ''
 admin-ip:
-  - '192.168.0.140'
-  - '192.168.0.218'
+  - '192.168.0.100'
 admin-telegram-id:
   - 518325236
   - 864662054
@@ -14,9 +13,16 @@ music-path: 'z:/музыка'
 files-path: 'z:/фото/архивы/2023/1 поток/'
 whitelist-path: '/etc/qwert.txt'
 photo-path: 'z:/фото'
+now-photo-path: 'z:\фото\2023\1 поток'
 monitor-path: 'z:/вд/2023/1 поток'
-albums:
-  - 292215594
-  - 292215662
-  - 292215665
-  - 292215667
+album_ids:
+  - "масленица":
+      - 293714146
+  - "1 поток":
+      - 293714166
+  - "2 поток":
+      - 293714172
+  - "3 поток":
+      - 293714178
+  - "4 поток":
+      - 293714184
