--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,7 @@
 router:
-  ip: 'http://192.168.1.1'
+  ip: '192.168.1.1'
   user: 'root'
-  password: ''
+  password: 'pusdes69'
 admin-ip:
   - '192.168.0.100'
 admin-telegram-id:
