--- a/config.yml
+++ b/config.yml
@@ -2,12 +2,13 @@ router:
   ip: '192.168.1.1'
   user: 'root'
   password: 'pusdes69'
+host: 'http://192.170.0.181'
 admin-ip:
+  - '192.170.0.181'
   - '192.168.0.100'
 ph-ip:
-  - '192.168.0.108'
+  - '192.170.0.181'
   - '192.168.0.100'
-  - '192.168.0.104'
 admin-telegram-id:
   - 518325236
   - 864662054
