--- a/config.yml
+++ b/config.yml
@@ -34,6 +34,38 @@ monitor-path: 'z:/вд/2023/1 поток'
 disco-dates:
   - 01.06.2023
 
+squads:
+  squad_1:
+    slogan: ћы рождены, чтоб сказку сделать былью
+    registration-date: 01.06.1960
+    squad-size: 25
+    balance: загрузка...
+    logo: no_image.png
+  squad_2:
+    slogan: ћы рождены, чтоб сказку сделать былью
+    registration-date: 01.06.1961
+    squad-size: 25
+    balance: загрузка...
+    logo: no_image.png
+  squad_3:
+    slogan: ћы рождены, чтоб сказку сделать былью
+    registration-date: 01.06.1962
+    squad-size: 25
+    balance: загрузка...
+    logo: no_image.png
+  squad_4:
+    slogan: ћы рождены, чтоб сказку сделать былью
+    registration-date: 01.06.1963
+    squad-size: 25
+    balance: загрузка...
+    logo: no_image.png
+  squad_5:
+    slogan: ћы рождены, чтоб сказку сделать былью
+    registration-date: 01.06.1964
+    squad-size: 25
+    balance: бюджет созвезди€
+    logo: no_image.png
+
 album_ids:
   - "масленица":
       - 293714146
