adding library player

--- a/config.yml
+++ b/config.yml
@@ -64,7 +64,7 @@ squads:
     registration-date: 01.06.1964
     squad-size: 25
     balance: бюджет созвездия
-    logo: no_image.png
+    logo: 5_squad.png
 
 album_ids:
   - "масленица":
