--- a/config.yml
+++ b/config.yml
@@ -24,56 +24,56 @@ ph-ip:
   - '192.170.0.181'
   - '192.168.0.100'
 
-music-path: 'z:/музыка/дискотека'
-archives-path: 'z:/фото/архивы/2023/1 поток/'
+music-path: 'z:/РјСѓР·С‹РєР°/РґРёСЃРєРѕС‚РµРєР°'
+archives-path: 'z:/С„РѕС‚Рѕ/Р°СЂС…РёРІС‹/2023/1 РїРѕС‚РѕРє'
 whitelist-path: '/etc/qwert.txt'
-photo-path: 'z:/фото'
-now-photo-path: 'z:/фото/2023/1 поток'
-monitor-path: 'z:/вд/2023/1 поток'
+photo-path: 'z:/С„РѕС‚Рѕ'
+now-photo-path: 'z:/С„РѕС‚Рѕ/2023/1 РїРѕС‚РѕРє'
+monitor-path: 'z:/РІРґ/2023/1 РїРѕС‚РѕРє'
 
 disco-dates:
   - 01.06.2023
 
 squads:
   squad_1:
-    slogan: Мы рождены, чтоб сказку сделать былью
+    slogan: РњС‹ СЂРѕР¶РґРµРЅС‹, С‡С‚РѕР± СЃРєР°Р·РєСѓ СЃРґРµР»Р°С‚СЊ Р±С‹Р»СЊСЋ
     registration-date: 01.06.1960
     squad-size: 25
-    balance: загрузка...
+    balance: Р·Р°РіСЂСѓР·РєР°...
     logo: no_image.png
   squad_2:
-    slogan: Мы рождены, чтоб сказку сделать былью
+    slogan: РњС‹ СЂРѕР¶РґРµРЅС‹, С‡С‚РѕР± СЃРєР°Р·РєСѓ СЃРґРµР»Р°С‚СЊ Р±С‹Р»СЊСЋ
     registration-date: 01.06.1961
     squad-size: 25
-    balance: загрузка...
+    balance: Р·Р°РіСЂСѓР·РєР°...
     logo: no_image.png
   squad_3:
-    slogan: Мы рождены, чтоб сказку сделать былью
+    slogan: РњС‹ СЂРѕР¶РґРµРЅС‹, С‡С‚РѕР± СЃРєР°Р·РєСѓ СЃРґРµР»Р°С‚СЊ Р±С‹Р»СЊСЋ
     registration-date: 01.06.1962
     squad-size: 25
-    balance: загрузка...
+    balance: Р·Р°РіСЂСѓР·РєР°...
     logo: no_image.png
   squad_4:
-    slogan: Мы рождены, чтоб сказку сделать былью
+    slogan: РњС‹ СЂРѕР¶РґРµРЅС‹, С‡С‚РѕР± СЃРєР°Р·РєСѓ СЃРґРµР»Р°С‚СЊ Р±С‹Р»СЊСЋ
     registration-date: 01.06.1963
     squad-size: 25
-    balance: загрузка...
+    balance: Р·Р°РіСЂСѓР·РєР°...
     logo: no_image.png
   squad_5:
-    slogan: Мы рождены, чтоб сказку сделать былью
+    slogan: РњС‹ СЂРѕР¶РґРµРЅС‹, С‡С‚РѕР± СЃРєР°Р·РєСѓ СЃРґРµР»Р°С‚СЊ Р±С‹Р»СЊСЋ
     registration-date: 01.06.1964
     squad-size: 25
-    balance: бюджет созвездия
+    balance: Р±СЋРґР¶РµС‚ СЃРѕР·РІРµР·РґРёСЏ
     logo: 5_squad.png
 
 album_ids:
-  - "масленица":
+  - "РјР°СЃР»РµРЅРёС†Р°":
       - 293714146
-  - "1 поток":
+  - "1 РїРѕС‚РѕРє":
       - 293714166
-  - "2 поток":
+  - "2 РїРѕС‚РѕРє":
       - 293714172
-  - "3 поток":
+  - "3 РїРѕС‚РѕРє":
       - 293714178
-  - "4 поток":
+  - "4 РїРѕС‚РѕРє":
       - 293714184
