--- a/config.yml
+++ b/config.yml
@@ -11,7 +11,7 @@ db:
 mqtt:
   host: 'vympel.one'
   port: 1883
-  topic: ''
+  buttons-topic: 'buttons'
   laser-topic: ''
 
 host: 'vympel.one'
@@ -23,7 +23,7 @@ admin-telegram-id:
   - 839840272
   - 1061060541
 admin-ip:
-  - '192.168.0.1000'
+  - '192.168.0.100'
   - '192.168.0.15'
 ph-ip:
   - '192.168.0.47'
@@ -31,7 +31,7 @@ ph-ip:
 music-path: 'z:/музыка/дискотека'
 photo-path: 'z:/фото'
 now-photo-path: 'z:/фото/2023/2 поток'
-archives-path: 'z:/фото/архивы/2023/2 поток'
+archives-path: 'z:/фото/архивы/2023/2 поток/'
 
 whitelist-path: '/etc/qwert.txt'
 
