--- a/config.yml
+++ b/config.yml
@@ -26,18 +26,20 @@ admin-ip:
   - '192.168.0.100'
   - '192.168.0.15'
   - '192.168.0.16'
+  - '192.168.0.223'
+  - '192.168.0.60'
 ph-ip:
   - '192.168.0.47'
   - '192.168.0.48'
 
 music-path: 'z:/музыка/дискотека'
 photo-path: 'z:/фото'
-now-photo-path: 'z:/фото/2023/2 поток'
-archives-path: 'z:/фото/архивы/2023/2 поток/'
+now-photo-path: 'z:/фото/2023/3 поток'
+archives-path: 'z:/фото/архивы/2023/3 поток/'
 
 whitelist-path: '/etc/qwert.txt'
 
-monitor-path: 'z:/вд/2023/2 поток'
+monitor-path: 'z:/вд/2023/3 поток'
 
 disco-dates:
   - 03.07.2023
@@ -47,33 +49,45 @@ disco-dates:
   - 10.07.2023
   - 13.07.2023
   - 15.07.2023
+  - 22.07.2023
+  - 24.07.2023
+  - 26.07.2023
+  - 27.08.2023
+  - 01.08.2023
+  - 03.08.2023
+  - 04.08.2023
 
 squads:
   squad_1:
-    slogan: Мы рождены, чтоб сказку сделать былью
-    registration-date: 01.06.1960
-    squad-size: 25
+    name: Киберпингви
+    slogan: Киберпингви я люблю!
+    registration-date: 21.07.2023
+    squad-size: 32
     balance: загрузка...
-    logo: no_image.png
+    logo: 1_squad.png
   squad_2:
-    slogan: Мы рождены, чтоб сказку сделать былью
-    registration-date: 01.06.1961
-    squad-size: 25
+    name: Земля будущего
+    slogan: Мы направляем свет, где нас нет, чтобы наступил рассвет!
+    registration-date: 21.07.2023
+    squad-size: 34
     balance: загрузка...
-    logo: no_image.png
+    logo: 2_squad.png
   squad_3:
-    slogan: Мы рождены, чтоб сказку сделать былью
-    registration-date: 01.06.1962
-    squad-size: 25
+    name: Флешики
+    slogan: Флешиков девиз наш мил – пришел, увидел, победил!
+    registration-date: 21.07.2023
+    squad-size: 43
     balance: загрузка...
-    logo: no_image.png
+    logo: 3_squad.png
   squad_4:
-    slogan: Мы рождены, чтоб сказку сделать былью
-    registration-date: 01.06.1963
-    squad-size: 25
+    name: Пиксели
+    slogan: Пиксели – маленькие, мы – велики, знаем, дойдем до конца игры!
+    registration-date: 21.07.2023
+    squad-size: 38
     balance: загрузка...
-    logo: no_image.png
+    logo: 4_squad.png
   squad_5:
+    name: Педсостав
     slogan: Мы рождены, чтоб сказку сделать былью
     registration-date: 01.06.1964
     squad-size: 25
