--- a/config.yml
+++ b/config.yml
@@ -36,7 +36,7 @@ ph-ip:
 
 photo-use-year: true
 year: 2024
-shift: 1
+shift: 2
 music-path: 'z:/музыка/голосование'
 photo-path: 'z:/фото'
 now-photo-path: 'z:/фото/{year}/{shift} поток'
@@ -48,7 +48,7 @@ exclude-photo-path:
   - фотографирование
 whitelist-path: '/whitelist.txt'
 
-monitor-path: 'z:/вд/{year}/1 поток'
+monitor-path: 'z:/вд/{year}/{shift} поток'
 
 disco-dates:
   - 03.07.2023
@@ -76,7 +76,11 @@ disco-dates:
   - 10.06.2024
   - 11.06.2024
   - 14.06.2024
-  - 15.06.2024
+  - 17.06.2024
+  - 20.06.2024
+  - 23.06.2024
+  - 24.06.2024
+  - 30.06.2024
 
 album_ids:
   - "вымпелevent":
