--- a/config.yml
+++ b/config.yml
@@ -11,7 +11,7 @@ db:
   user: 'postgres'
 
 mqtt:
-  host: 'mqtt.vympel.one'
+  host: '192.168.21.1'
   port: 1883
   buttons-topic: 'user/#'
   laser-topic: ''
@@ -36,8 +36,9 @@ ph-ip:
 
 photo-use-year: true
 year: 2024
-shift: 2
+shift: 3
 music-path: 'z:/музыка/голосование'
+sound-folder: 'z:/лагерь/музыка/autosound'
 photo-path: 'z:/фото'
 now-photo-path: 'z:/фото/{year}/{shift} поток'
 archives-path: 'z:/'
@@ -49,6 +50,46 @@ exclude-photo-path:
 whitelist-path: '/whitelist.txt'
 
 monitor-path: 'z:/вд/{year}/{shift} поток'
+
+
+ayariva-ml:
+  cols: 6
+  categories:
+    - 'Самая-самая'
+    - 'Эй, девчонка, в 16 ряду'
+    - 'Ламповая голова'
+    - 'Санта барбара'
+    - 'Камон, ребят, это же'
+    - 'Все шо можно и нельзя'
+
+
+
+
+ayariva-st:
+  cols: 6
+  categories:
+    - 'Самая-самая'
+    - 'Эй, девчонка, в 16 ряду'
+    - 'Ламповая голова'
+    - 'Санта барбара'
+    - 'Камон, ребят, это же'
+    - 'Все шо можно и нельзя'
+
+
+
+days:
+  #  06_музыкальный_день: 20.07.2024
+  #  10_день_семьи: 20.07.2024
+  03_стартин: 20.07.2024
+  07_день_науки: 22.07.2024
+  08_спортивный_день: 23.07.2024
+  04_отрядный_день: 24.07.2024
+  #  01_юбилей: 24.07.2024
+  11_день_игр: 26.07.2024
+  05_новый_год: 27.07.2024
+  02_русский_праздник: 28.07.2024
+  12_день_пионера: 01.01.2007
+  09_день_театра: 01.07.2007
 
 disco-dates:
   - 03.07.2023
@@ -81,6 +122,18 @@ disco-dates:
   - 23.06.2024
   - 24.06.2024
   - 30.06.2024
+  - 05.07.2024
+  - 08.07.2024
+  - 10.07.2024
+  - 12.07.2024
+  - 20.07.2024
+  - 22.07.2024
+  - 25.07.2024
+  - 27.07.2024
+  - 28.07.2024
+  - 30.07.2024
+  - 31.07.2024
+  - 01.08.2024
 
 album_ids:
   - "вымпелevent":
