--- a/config.yml
+++ b/config.yml
@@ -1,189 +1,166 @@
-summer-mode: false
-
-router:
-  ip: '192.168.20.1'
-  user: 'root'
-
-db:
-  host: 'localhost'
-  port: 5432
-  database: 'vympel.one'
-  user: 'postgres'
-
-mqtt:
-  host: '192.168.21.1'
-  port: 1883
-  buttons-topic: 'user/#'
-  laser-topic: ''
-
-snapdrop-host: 'snapdrop.vympel.one'
-
-admin-telegram-id:
-  - 518325236
-  - 864662054
-  - 839840272
-  - 1061060541
-  - 1077531046
-  - 1060062173
-
 admin-ip:
-  - '192.168.21.2'
-  - '192.168.21.4'
-  - '192.168.21.5'
-  - '192.168.100.181'
-ph-ip:
-  - '192.168.21.6'
-
-photo-use-year: true
-year: 2024
-shift: 3
-music-path: 'z:/музыка/голосование'
-sound-folder: 'z:/лагерь/музыка/autosound'
-photo-path: 'z:/фото'
-now-photo-path: 'z:/фото/{year}/{shift} поток'
-archives-path: 'z:/'
-presentation-path: 'z:/вд/{year}/{shift} поток'
-exclude-photo-path:
-  - педсостав
-  - скрины
-  - фотографирование
-whitelist-path: '/whitelist.txt'
-
-monitor-path: 'z:/вд/{year}/{shift} поток'
-
-
-ayariva-ml:
-  cols: 6
-  categories:
-    - 'Самая-самая'
-    - 'Эй, девчонка, в 16 ряду'
-    - 'Ламповая голова'
-    - 'Санта барбара'
-    - 'Камон, ребят, это же'
-    - 'Все шо можно и нельзя'
-
-
-
-
-ayariva-st:
-  cols: 6
-  categories:
-    - 'Самая-самая'
-    - 'Эй, девчонка, в 16 ряду'
-    - 'Ламповая голова'
-    - 'Санта барбара'
-    - 'Камон, ребят, это же'
-    - 'Все шо можно и нельзя'
-
-
-
-days:
-  #  06_музыкальный_день: 20.07.2024
-  #  10_день_семьи: 20.07.2024
-  03_стартин: 20.07.2024
-  07_день_науки: 22.07.2024
-  08_спортивный_день: 23.07.2024
-  04_отрядный_день: 24.07.2024
-  #  01_юбилей: 24.07.2024
-  11_день_игр: 26.07.2024
-  05_новый_год: 27.07.2024
-  02_русский_праздник: 28.07.2024
-  12_день_пионера: 01.01.2007
-  09_день_театра: 01.07.2007
-
-disco-dates:
-  - 03.07.2023
-  - 05.07.2023
-  - 07.07.2023
-  - 09.07.2023
-  - 10.07.2023
-  - 13.07.2023
-  - 15.07.2023
-  - 22.07.2023
-  - 24.07.2023
-  - 26.07.2023
-  - 27.07.2023
-  - 01.08.2023
-  - 03.08.2023
-  - 04.08.2023
-  - 10.08.2023
-  - 12.08.2023
-  - 13.08.2023
-  - 14.08.2023
-  - 16.08.2023
-  - 18.08.2023
-  - 21.08.2023
-  - 22.08.2023
-  - 10.06.2024
-  - 11.06.2024
-  - 14.06.2024
-  - 17.06.2024
-  - 20.06.2024
-  - 23.06.2024
-  - 24.06.2024
-  - 30.06.2024
-  - 05.07.2024
-  - 08.07.2024
-  - 10.07.2024
-  - 12.07.2024
-  - 20.07.2024
-  - 22.07.2024
-  - 25.07.2024
-  - 27.07.2024
-  - 28.07.2024
-  - 30.07.2024
-  - 31.07.2024
-  - 01.08.2024
-
+- 192.168.21.2
+- 192.168.21.4
+- 192.168.21.5
+- 192.168.100.181
+admin-telegram-id:
+- 518325236
+- 864662054
+- 839840272
+- 1061060541
+- 1077531046
+- 1060062173
 album_ids:
-  - "вымпелevent":
-      - 301288665
-  - "масленица":
-      - 301347176
-  - "1 поток":
-      - 301347177
-  - "2 поток":
-      - 301347180
-  - "3 поток":
-      - 301347182
-  - "4 поток":
-      - 301347183
-
-
-
+- вымпелevent:
+  - 301288665
+- масленица:
+  - 301347176
+- 1 поток:
+  - 301347177
+- 2 поток:
+  - 301347180
+- 3 поток:
+  - 301347182
+- 4 поток:
+  - 301347183
+archives-path: z:/
+ayariva-ml:
+  categories:
+  - Самая-самая
+  - Эй, девчонка, в 16 ряду
+  - Ламповая голова
+  - Санта барбара
+  - Камон, ребят, это же
+  - Все шо можно и нельзя
+  cols: 6
+ayariva-st:
+  categories:
+  - Самая-самая
+  - Эй, девчонка, в 16 ряду
+  - Ламповая голова
+  - Санта барбара
+  - Камон, ребят, это же
+  - Все шо можно и нельзя
+  cols: 6
+days:
+  01_юбилей: 24.07.2024
+  02_русский_праздник: 28.07.2024
+  03_стартин: 20.07.2024
+  05_новый_год: 27.07.2024
+  08_спортивный_день: 23.07.2024
+  09_день_театра: 01.07.2007
+  11_день_игр: 26.07.2024
+  12_день_пионера: 01.01.2007
+db:
+  database: vympel.one
+  host: localhost
+  port: 5432
+  user: postgres
+disco-dates:
+- 03.07.2023
+- 05.07.2023
+- 07.07.2023
+- 09.07.2023
+- 10.07.2023
+- 13.07.2023
+- 15.07.2023
+- 22.07.2023
+- 24.07.2023
+- 26.07.2023
+- 27.07.2023
+- 01.08.2023
+- 03.08.2023
+- 04.08.2023
+- 10.08.2023
+- 12.08.2023
+- 13.08.2023
+- 14.08.2023
+- 16.08.2023
+- 18.08.2023
+- 21.08.2023
+- 22.08.2023
+- 10.06.2024
+- 11.06.2024
+- 14.06.2024
+- 17.06.2024
+- 20.06.2024
+- 23.06.2024
+- 24.06.2024
+- 30.06.2024
+- 05.07.2024
+- 08.07.2024
+- 10.07.2024
+- 12.07.2024
+- 20.07.2024
+- 22.07.2024
+- 25.07.2024
+- 27.07.2024
+- 28.07.2024
+- 30.07.2024
+- 31.07.2024
+- 01.08.2024
+exclude-photo-path:
+- педсостав
+- скрины
+- фотографирование
+is-uploading: false
+monitor-path: z:/вд/{year}/{shift} поток
+mqtt:
+  buttons-topic: user/#
+  host: 192.168.21.1
+  laser-topic: ''
+  port: 1883
+music-path: z:/музыка/голосование
+now-photo-path: z:/фото/{year}/{shift} поток
+ph-ip:
+- 192.168.21.6
+- null
+photo-path: z:/фото
+photo-use-shift: true
+photo-use-year: true
+presentation-path: z:/вд/{year}/{shift} поток
+router:
+  ip: 192.168.20.1
+  user: root
+shift: 3
+snapdrop-host: snapdrop.vympel.one
+sound-folder: z:/лагерь/музыка/autosound
 squads:
   squad_1:
+    balance: загрузка...
+    logo: no_image.png
     name: 1 отряд
-    slogan: Девиз
     registration-date: 01.01.2024
+    slogan: Девиз
     squad-size: 0
-    balance: загрузка...
-    logo: no_image.png
   squad_2:
+    balance: загрузка...
+    logo: no_image.png
     name: 2 отряд
-    slogan: Девиз
     registration-date: 01.01.2024
+    slogan: Девиз
     squad-size: 0
-    balance: загрузка...
-    logo: no_image.png
   squad_3:
+    balance: загрузка...
+    logo: no_image.png
     name: 3 отряд
-    slogan: Девиз
     registration-date: 01.01.2024
+    slogan: Девиз
     squad-size: 0
-    balance: загрузка...
-    logo: no_image.png
   squad_4:
-    name: 4 отряд
-    slogan: Девиз
-    registration-date: 01.01.2024
-    squad-size: 0
     balance: загрузка...
     logo: no_image.png
+    name: 4 отряд
+    registration-date: 01.01.2024
+    slogan: Девиз
+    squad-size: 0
   squad_5:
-    name: педсостав
-    slogan: мы рождены, чтоб сказку сделать былью
-    registration-date: 01.06.1964
-    squad-size: 25
     balance: бюджет созвездия
     logo: 5_squad.png
+    name: педсостав
+    registration-date: 01.06.1964
+    slogan: мы рождены, чтоб сказку сделать былью
+    squad-size: 25
+summer-mode: false
+whitelist-path: /whitelist.txt
+year: 2024
